Initially set to 3.0

--- a/src/build.gradle
+++ b/src/build.gradle
@@ -39,6 +39,13 @@ allprojects {
         maven { url "https://jitpack.io" }
         google()
     }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
+
 }
 
 task clean(type: Delete) {
