--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -30,19 +30,22 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
-    implementation 'io.reactivex:rxjava:1.3.0'
-    implementation 'io.reactivex:rxandroid:1.0.1'
+    //rxjava 1 and 2 库，去除rx 1.x的依赖
+    //implementation 'io.reactivex:rxjava:1.3.0'
+    //implementation 'io.reactivex:rxandroid:1.0.1'
     implementation "io.reactivex.rxjava2:rxjava:2.2.5"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    //数据库
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.alibaba:fastjson:1.2.54'
+    // Retrofit库
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    // Retrofit库
-    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     // Okhttp库
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     implementation 'com.github.GrenderG:Toasty:1.3.1'
 }
