--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".InfoActivity" />
+        <activity android:name=".InfoActivityEdit" />
         <activity
             android:name=".ListActivity"
             android:launchMode="singleInstance"></activity>
