--- a/src/app/build.gradle
+++ b/src/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //数据库
     implementation 'android.arch.persistence.room:runtime:1.1.1'
+    //json
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.alibaba:fastjson:1.2.54'
     // Retrofit库
